--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- ==================================
                    custom CSS
     ==================================== -->
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <!-- ==================================
                    Remix Icons
     ==================================== -->
